--- a/zh-CN/kubejs/assets/morediscs/lang/zh_cn.json
+++ b/zh-CN/kubejs/assets/morediscs/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.music_disc_group": "音乐唱片s",
+    "itemGroup.music_disc_group": "音乐唱片",
     "item.morediscs.music_disc_test": "音乐唱片",
     "item.morediscs.music_disc_test.desc": "description go derrrrrrrrr",
     "item.morediscs.music_disc_tall": "音乐唱片",
