--- a/zh-CN/resourcepacks/vm-language/assets/ars_elemental/lang/zh_cn.json
+++ b/zh-CN/resourcepacks/vm-language/assets/ars_elemental/lang/zh_cn.json
@@ -120,7 +120,7 @@
   "ars_elemental.page1.air_focus": "该法术核心与气元素学派的魔符相协调。当装备时，该学派的魔符将会被强化且魔力消耗减少。不足的是，佩戴低阶核心会削弱其他元素学派的魔符。而只有佩戴主核心时，佩戴者处于Y轴200以上以及长时间降落状态时才会给予魔力再生Ⅰ的效果。",
   "ars_elemental.page2.air_focus": "该核心会强化发射魔符，当使用延长时效强化后，会对目标造成飘浮效果。如果它造成致命一击，就有机会掉落头部或头骨。",
   "ars_elemental.page1.earth_focus": "该法术核心与土元素学派的魔符相协调。当装备时，该学派的魔符将会被强化且魔力消耗减少。不足的是，佩戴低阶核心会削弱其他元素学派的魔符。而只有佩戴主核心时，佩戴者处于Y轴0以下时才会给予魔力再生Ⅰ的效果。",
-  "ars_elemental.page2.earth_focus": "该核心会强化剧毒孢子魔符, 命中的目标会先附带饥饿效果然后造成伤害；生长魔符，对亡灵生物造成伤害并有概率产生花朵；重力魔符，当用敏感强化后，会在目标处创建一个引力场，将实体拉向它的中心(过滤器兼容)，同时提高了1.5的治疗效果。只有主核心，才会有额外的击退抗性效果。",
+  "ars_elemental.page2.earth_focus": "该核心会强化剧毒孢子魔符，命中的目标会先附带饥饿效果然后造成伤害；生长魔符，对亡灵生物造成伤害并有概率产生花朵；重力魔符，当用敏感强化后，会在目标处创建一个引力场，将实体拉向它的中心(过滤器兼容)，同时提高了1.5的治疗效果。只有主核心，才会有额外的击退抗性效果。",
   "ars_elemental.page1.necrotic_focus": "这个魔法学派是从试图理解生、死以及介于两者之间的魔法师的召唤和禁忌魔法师分支而来的。与该学派联系在一起的本质是在生与死之间循环，实验表明它会让马在肉体、骨骼和僵尸形态之间循环，但它会和以前一样吗？",
   "ars_elemental.page2.necrotic_focus": "通过向召唤水晶注入邪恶能量，你可以将其原本的召唤能力腐化成死灵之术。召唤学派的魔符将会得到两次免费的延长时效强化，治疗魔符将会得到两次免费的强化，魅惑对亡灵生物的影响更大。召唤骏马将会变成召唤骷髅马，其能够在水下行走和呼吸。",
   "ars_elemental.page3.necrotic_focus": "被召唤的狼、骷髅和恼鬼一开始似乎没有变化，但如果它们在召唤者佩戴上该核心时死亡，它们将会从死亡中复活一次，并充满嗜血欲。这些死灵召唤会在它们每杀死一个敌人时治疗你。召唤狼、亡灵和威克斯一开始似乎没有变化，但如果他们在召唤师佩戴此焦点时死亡，他们就会从死亡中复活一次，充满血腥欲望。这些亡灵召唤物会在你施放归巢法术时施放归巢法术，并在每次杀死敌人时治愈你。",
@@ -137,7 +137,7 @@
   "ars_nouveau.page.elemental_turrets": "元素灌注炮台",
   "ars_elemental.page1.elemental_turrets": "附魔法术炮塔可以被注入元素核心的力量，赋予它们部分元素核心的能力。而这些元素炮台所发射的法术将触发对应的元素核心能力，并且如果发射的法术中包含着相匹配的元素学派的魔符，则将会减少65%的魔源消耗。",
   "ars_elemental.page.base_bangle": "这个魔法饰品有一定几率提高你的法术伤害。但它并不稳定，或许让它适应某一元素学派就可以稳定它的能力。",
-  "ars_elemental.page1.air_bangle": "该手镯可以提高你的气元素学派法术的伤害。 给予佩戴者移动速度提高和攻击击退的被动。",
+  "ars_elemental.page1.air_bangle": "该手镯可以提高你的气元素学派法术的伤害。给予佩戴者移动速度提高和攻击击退的被动。",
   "ars_elemental.page1.fire_bangle": "该手镯可以提高你的火元素学派法术的伤害。使佩戴者攻击附带着火，并且处于炎热地形时会给予佩戴者移动速度提高的被动。",
   "ars_elemental.page1.earth_bangle": "该手镯可以提高你的土元素学派法术的伤害。使佩戴者攻击附带禁锢，并且免疫仙人掌和浆果丛的伤害以及拥有抗击退效果。",
   "ars_elemental.page1.water_bangle": "该手镯可以提高你的水元素学派法术的伤害。使佩戴者攻击附带冻结，并且在水中和雨中还会有移动速度提高的被动。",
