--- a/zh-CN/resourcepacks/vm-language/assets/hexerei/lang/zh_cn.json
+++ b/zh-CN/resourcepacks/vm-language/assets/hexerei/lang/zh_cn.json
@@ -159,17 +159,17 @@
 	"fluid.hexerei.quicksilver_fluid": "水银",
 	"fluid.hexerei.blood_fluid": "血液",
 	"tooltip.hexerei.bottle_lava": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.bottle_lava_shift": "注意！玻璃瓶不能用来长时间保存熔岩, 喝下它也并不是一个明智的做法。",
+	"tooltip.hexerei.bottle_lava_shift": "注意！玻璃瓶不能用来长时间保存熔岩，喝下它也并不是一个明智的做法。",
 	"tooltip.hexerei.bottle_milk": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.bottle_milk_shift": "嗯……美味的牛奶，能消除所有的效果！",
 	"tooltip.hexerei.tallow_impurity": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.tallow_impurity_shift": "嗯，美味……酥脆的油脂！",
-	"tooltip.hexerei.bottle_tallow": "可以用来制作蜡烛, 按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.bottle_tallow_shift": "把蜡烛蘸注器放在装满了油脂的混合锅上, 再把线放在蘸注器上作为烛芯, 然后开始进行蘸注。",
+	"tooltip.hexerei.bottle_tallow": "可以用来制作蜡烛，按住 §eSHIFT§r 以获取更多的信息",
+	"tooltip.hexerei.bottle_tallow_shift": "把蜡烛蘸注器放在装满了油脂的混合锅上，再把线放在蘸注器上作为烛芯，然后开始进行蘸注。",
 	"tooltip.hexerei.bottle_quicksilver": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.bottle_quicksilver_shift": "可能这是最难以下咽的东西了吧 (配方即将到来)",
 	"tooltip.hexerei.bottle_blood": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.bottle_blood_shift": "在混合锅中放一个鲜血符印，反复跳进去三次放血, 然后可以用瓶子装起。",
+	"tooltip.hexerei.bottle_blood_shift": "在混合锅中放一个鲜血符印，反复跳进去三次放血，然后可以用瓶子装起。",
 	"tooltip.hexerei.broom": "§e[SHIFT]§r",
 	"tooltip.hexerei.broom_2": " 杂项：%s",
 	"tooltip.hexerei.broom_3": " 挎包：%s",
@@ -179,7 +179,7 @@
 	"tooltip.hexerei.broom_satchel": "  挎包",
 	"tooltip.hexerei.broom_brush": "扫帚尾",
 	"tooltip.hexerei.shift": "SHIFT",
-	"tooltip.hexerei.broom_shift_2": "按住'%s'下降。",
+	"tooltip.hexerei.broom_shift_2": "按住‘%s’下降。",
 	"tooltip.hexerei.broom_shift_3": "潜行右击以打开它的物品栏。",
 	"tooltip.hexerei.broom_shift_4": "必须放下才能打开其物品栏。",
 	"tooltip.hexerei.mahogany_broom_shift": "速度快，而且还§4抗火§r。",
@@ -187,9 +187,9 @@
 	"tooltip.hexerei.willow_broom_shift": "虽然很慢，但是它精确而廉价，",
 	"tooltip.hexerei.willow_broom_shift_2": "适合游戏发展的前期使用。",
 	"tooltip.hexerei.druid_armor": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.druid_armor_shift": "[制作中] 盔甲套装, 可能会添加合成配方",
+	"tooltip.hexerei.druid_armor_shift": "[制作中] 盔甲套装，可能会添加合成配方",
 	"tooltip.hexerei.orc_armor": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.orc_armor_shift": "[制作中] 盔甲套装, 可能会添加合成配方",
+	"tooltip.hexerei.orc_armor_shift": "[制作中] 盔甲套装，可能会添加合成配方",
 	"tooltip.hexerei.witch_armor": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.witch_armor_shift": "女巫最珍贵的套装\n根据装备的件数给予不同效果。",
 	"tooltip.hexerei.pestle_and_mortar_1": "用于研磨配方",
@@ -203,13 +203,13 @@
 	"tooltip.hexerei.herb_jar": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.herb_jar_shift": "内容：",
 	"tooltip.hexerei.herb_drying_rack": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.herb_drying_rack_shift": "它可以使物品或方块干燥, 也可以用于装饰! 只需右击即可将物品放入其中，再潜行右击即可将其移除",
+	"tooltip.hexerei.herb_drying_rack_shift": "它可以使物品或方块干燥，也可以用于装饰! 只需右击即可将物品放入其中，再潜行右击即可将其移除",
 	"tooltip.hexerei.herb_drying_rack_full": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.herb_drying_rack_full_shift": "此物品只用于装饰",
 	"tooltip.hexerei.crystal_ball": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.crystal_ball_shift": "用于判断是否为夜晚/白天，以及如果是夜晚，则可以判断月相。",
 	"tooltip.hexerei.flower_output_item": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.flower_output_item_shift": "当植物几乎成熟或已经成熟时，可以右击该植物从其植株中拾取, 该植物就像浆果丛一样，可以再生其产品。",
+	"tooltip.hexerei.flower_output_item_shift": "当植物几乎成熟或已经成熟时，可以右击该植物从其植株中拾取，该植物就像浆果丛一样，可以再生其产品。",
 	"tooltip.hexerei.coffer": "集储物与装饰于一身的方块",
 	"tooltip.hexerei.coffer_shift": "可以在世界中任意放置。",
 	"tooltip.hexerei.coffer_shift_2": "可以用来储存物品，并像潜影盒那样直接带走。",
@@ -219,16 +219,16 @@
 	"tooltip.hexerei.herb_jar_shift_4": "左击正面可以取出其中一个物品。",
 	"tooltip.hexerei.herb_jar_shift_5": "潜行左击，可以取出一整组物品。",
 	"tooltip.hexerei.herb_jar_shift_6": "右击任意面，可打开其界面。",
-	"tooltip.hexerei.herb_jar_shift_7": "只能容纳一种类型的物品, 但是能容纳1024个同种物品。",
+	"tooltip.hexerei.herb_jar_shift_7": "只能容纳一种类型的物品，但是能容纳1024个同种物品。",
 	"tooltip.hexerei.candle": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.candle_shift": "Candles will provide different benefits based on herbs infused. (WIP)",
 	"tooltip.hexerei.candle_shift_2": "可以和其它本模组的蜡烛放置在同一个方块上",
 	"tooltip.hexerei.candle_shift_3": "可以给它们蘸浸许多的效果和层级",
 	"tooltip.hexerei.candle_dipper": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.candle_dipper_shift_1": "把它放在装满油脂的混合锅的顶部, 然后将3根线放在蜡烛蘸注器上进行蘸注。",
+	"tooltip.hexerei.candle_dipper_shift_1": "把它放在装满油脂的混合锅的顶部，然后将3根线放在蜡烛蘸注器上进行蘸注。",
 	"tooltip.hexerei.candle_dipper_shift_2": "通过空手右击，可以取下制作好的蜡烛。",
 	"tooltip.hexerei.candelabra": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.candelabra_shift": "您既可以将它挂在方块/锁链上, 也可以直接放在方块上, 既可以直接点燃，也可以用水直接浇灭。",
+	"tooltip.hexerei.candelabra_shift": "您既可以将它挂在方块/锁链上，也可以直接放在方块上，既可以直接点燃，也可以用水直接浇灭。",
 	"tooltip.hexerei.altar": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.altar_shift": "主要用于承托暗影之书，并显示书本内容以进行阅读。其它物品也可以摆放到书坛上，并可以通过潜行右击点击书坛取走。",
 	"tooltip.hexerei.sage_burning_plate": "用于燃烧 §e干燥的鼠尾草捆§r。",
@@ -239,10 +239,10 @@
 	"tooltip.hexerei.sage_burning_plate_shift_5": "在潜行的时候对其空手右击，可移除其上面的草束。",
 	"tooltip.hexerei.sage_burning_plate_shift_6": "未潜行时对其空手右击，可以改变它的粒子模式。",
 	"tooltip.hexerei.dried_sage_bundle_shift_1": "这捆草还能燃烧%s。",
-	"tooltip.hexerei.dried_sage_bundle_shift_2": "当您把草束放在%s中时, 可以用打火石进行点燃。",
+	"tooltip.hexerei.dried_sage_bundle_shift_2": "当您把草束放在%s中时，可以用打火石进行点燃。",
 	"tooltip.hexerei.shift_for_info": "按住 §eSHIFT§r 以获取更多的信息",
 	"tooltip.hexerei.blend_item": "按住 §eSHIFT§r 以获取更多的信息",
-	"tooltip.hexerei.blend_item_shift": "[制作中] 这些药草的混合物将被用于蜡烛的蘸注配方, 可以使周围区域产生不同的效果，后面的仪式也是如此。",
+	"tooltip.hexerei.blend_item_shift": "[制作中] 这些药草的混合物将被用于蜡烛的蘸注配方，可以使周围区域产生不同的效果，后面的仪式也是如此。",
 	"tooltip.hexerei.sage_seeds": "通过破坏草来寻找。",
 	"tooltip.hexerei.seed_mixture_shift": "乌鸦最喜欢这种食物了。通过喂食，可以让乌鸦变成您的朋友。乌鸦零食。",
 	"tooltip.hexerei.keychain_contains": "包含：%s",
@@ -356,11 +356,11 @@
 	"tooltip.hexerei.crow_flute_select_button_0": "切换时，您可以通过右击乌鸦来选择它们。",
 	"tooltip.hexerei.crow_flute_select_button_1": "如果您有多个选中的乌鸦，只需要选中其中一个。",
 	"tooltip.hexerei.crow_flute_select_button_2": "乌鸦将会听取竖笛的声音。",
-	"tooltip.hexerei.crow_flute_select_button_3": "要想清除所有选中的乌鸦，只需要点击'清除' 按钮。",
+	"tooltip.hexerei.crow_flute_select_button_3": "要想清除所有选中的乌鸦，只需要点击‘清除’按钮。",
 	"tooltip.hexerei.crow_flute_perch_button_0": "切换时，可以更改选定乌鸦的栖息位置。",
 	"tooltip.hexerei.crow_flute_perch_button_1": "乌鸦所栖息的位置，是乌鸦在",
 	"tooltip.hexerei.crow_flute_perch_button_2": "不做任何任务时返回休息的地方。",
-	"tooltip.hexerei.crow_flute_perch_button_3": "要想清除所有选中的乌鸦栖息点，只需要点击'清除'按钮。",
+	"tooltip.hexerei.crow_flute_perch_button_3": "要想清除所有选中的乌鸦栖息点，只需要点击‘清除’按钮。",
 	"tooltip.hexerei.crow_flute_clear_perch_button_0": "清除所有选中的乌鸦栖息点",
 	"tooltip.hexerei.crow_flute_clear_selected_button_0": "清除所有选中的乌鸦",
 	"tooltip.hexerei.broom_settings": "设置",
@@ -386,7 +386,7 @@
 	"item.hexerei.book_of_shadows": "暗影之书",
 	"tooltip.hexerei.book_of_shadows_shift": "这本书是hexerei（魔法巫师）的指南书\n如果想要阅读这本书，则必须将其放置于书坛上。\n根据给定的染料在制作时给封面染色。\n再次将书染色，则将给书的边角染色。",
 	"item.hexerei.reading_glasses": "老花镜",
-	"tooltip.hexerei.reading_glasses_shift": "阅读暗影之书有点太难了？变成了爷爷一样的老花眼？老花镜可以像望远镜一样使用，也能够戴在您的头上使用'%s'调节缩放。",
+	"tooltip.hexerei.reading_glasses_shift": "阅读暗影之书有点太难了？变成了爷爷一样的老花眼？老花镜可以像望远镜一样使用，也能够戴在您的头上使用‘%s’调节缩放。",
 	"book.hexerei.index_page_1.passage_1": "索引页",
 	"book.hexerei.index_page_1.passage_2": "- 模组介绍",
 	"book.hexerei.index_page_1.passage_3": "- 请支持我",
@@ -404,7 +404,7 @@
 	"book.hexerei.intro_page_1.curseforge_link_tooltip": "Hexerei（魔法巫师）的Curseforge链接 - 右击",
 	"book.hexerei.intro_page_2.passage_1": "    我已经为这本书开发了一个多月了，完完全全地从头开始设计。我希望他是大家所期望的一切，甚至更多。\n\n  虽然大量的新内容还在展望中，但是新内容将包含黑暗巫师工会、咏唱施法以及更多魔宠等等！敬请关注！",
 	"book.hexerei.intro_page_3.passage_1": "    如果您还没把这本书搞明白，看看页面底部的角落，应该有箭头指引您前往下一页或上一页。\n\n\n\n 底部X键可以合上书本并静置于坛上，顶部小房子键会将您导向索引页。",
-	"book.hexerei.intro_page_4.passage_1": "    页面左上角标签按钮用于为您所在的页面添加书签, 再次点击它会改变书签的颜色。\n书签会在页面的两侧和顶部弹出，书签可以通过简单地右击、按住并拖动到另一个插槽来移动。",
+	"book.hexerei.intro_page_4.passage_1": "    页面左上角标签按钮用于为您所在的页面添加书签，再次点击它会改变书签的颜色。\n书签会在页面的两侧和顶部弹出，书签可以通过简单地右击、按住并拖动到另一个插槽来移动。",
 	"book.hexerei.intro_page_5.passage_1": "    它们可以与另一个书签或空插槽交换。右击书签会将您重定向到它保存的页面。\n 潜行并右击书坛以拿起此书。\n此书在拿起时可以保持打开或合上状态，尽管在您手中不能翻页，但当此书处于打开状态时，仍会显示当前书页，它必须在书坛上才能翻页。",
 	"book.hexerei.intro_page_6.passage_1": "    在配置中，如果字体难以阅读或您想要更多的沉浸感，您可以将字体从奇特的字体更改为普通的 minecraft 字体。\n 您还可以悬停到物品上并按 %kkey.hexerei.book_hovering_recipe 查询配方并使用 %kkey.hexerei.book_hovering_uses 单独打开JEI页面。",
 	"book.hexerei.support_page_1.passage_1": "    因为模组社区，这个模组已经走了很长一段路，并将因此而继续努力。快来加入我们的Discord吧！\n  如果您有任何问题，请随时加入并寻求帮助，因为我们是一个非常友好的社区！",
@@ -446,7 +446,7 @@
 	"book.hexerei.items_coffer_4.passage_1": "    一个方便的使用方法是，它可以被左击拾取。这些储物箱拾取后仍能存储先前放入其中的物品并被玩家带走。储物箱放置在地上打开时，也能够直接显示里面的物品。\n\n  在储物箱的操作界面的右侧，会显示一个乌鸦按钮。",
 	"book.hexerei.items_coffer_5.passage_1": "    当切换乌鸦按钮为收集模式时，会对储物盒内的物品进行检查，然后寻找收集一片区域内与储物盒内物品相同匹配的物品并存放到其中。\n\n    也可以将乌鸦的栖息地设置在储物箱上，乌鸦会拾回一片区域内所有的物品放进储物箱中。",
 	"book.hexerei.items_herb_jar_1.passage_1": "药草罐",
-	"book.hexerei.items_herb_jar_1.passage_2": "    药草罐是女巫们的'抽屉'。这个罐子能容纳高达1024个单种物品堆叠。\n    乌鸦也可以匹配并找到物品放到罐子中，就像储物箱那样在操作界面切换乌鸦按钮的开关。",
+	"book.hexerei.items_herb_jar_1.passage_2": "    药草罐是女巫们的‘抽屉’。这个罐子能容纳高达1024个单种物品堆叠。\n    乌鸦也可以匹配并找到物品放到罐子中，就像储物箱那样在操作界面切换乌鸦按钮的开关。",
 	"book.hexerei.items_herb_jar_2.passage_1": "    若要进入罐子的操作界面只要右击除正面外的任意一面即可，若要从正面进入罐子的操作界面的话只要空手潜行并右击即可。\n通过左击罐子正面从罐内取出物品，或潜行左击正面取出一组物品。",
 	"book.hexerei.items_herb_jar_3.passage_1": "    若要合成药草罐，您需要使用混合锅以及下方所展示的各种材料。",
 	"book.hexerei.items_herb_jar_4.passage_1": "    药草罐也可以使用各种染料进行染色，并且可以更改名字。下方的循环配方可以改变药草罐的颜色",
@@ -517,7 +517,7 @@
 	"book.hexerei.items_seed_mixture_1.passage_1": "混合种子",
 	"book.hexerei.items_seed_mixture_1.passage_2": "    看起来可以用于驯服乌鸦？的确，乌鸦很喜欢这种混合种子，并且乌鸦十分有用，所以您需要备上一点混合种子将其驯服在身边。要驯服乌鸦的话，确保您带上了足量的混合种子！",
 	"book.hexerei.items_warhammer_1.passage_1": "战锤",
-	"book.hexerei.items_warhammer_1.passage_2": "    等一下, 这不是给女巫用的物品。看起来像是和雷神之锤差不多并给某人准备的锤子。也许乌鸦会想要使用这把锤子。如果没猜错，它适合用来锤碎面前碍眼的家伙。",
+	"book.hexerei.items_warhammer_1.passage_2": "    等一下，这不是给女巫用的物品。看起来像是和雷神之锤差不多并给某人准备的锤子。也许乌鸦会想要使用这把锤子。如果没猜错，它适合用来锤碎面前碍眼的家伙。",
 	"book.hexerei.items_sage_seed_1.passage_1": "鼠尾草种子",
 	"book.hexerei.items_sage_seed_1.passage_2": "    破坏草可以找到这些种子，并且可以用来种植鼠尾草作物",
 	"book.hexerei.items_sage_1.passage_1": "鼠尾草",
